Made some config for display data

--- a/content/index.njk
+++ b/content/index.njk
@@ -6,6 +6,18 @@ const eleventyNavigation = {
 
 const numberOfLatestPostsToShow = 3;
 ---
+
+<div class="intro">
+	<p>
+		Hello, I'm Ahmadou Waly Ndiaye from Senegal and I love the Web!
+	</p>
+	<p>
+		You can find me on:
+		<a href="#">LinkedIn</a>
+		<a href="#">Github</a>
+		<a href="#">Twitter</a>
+	</p>
+</div>
 {% set postsCount = collections.posts | length %}
 {% set latestPostsCount = postsCount | min(numberOfLatestPostsToShow) %}
 <h1>Latest {{ latestPostsCount }} Post{% if latestPostsCount != 1 %}s{% endif %}</h1>
