--- a/content/index.njk
+++ b/content/index.njk
@@ -1,12 +1,3 @@
----js
-const eleventyNavigation = {
-	key: "Accueil",
-	order: 1
-};
-
-const numberOfLatestPostsToShow = 3;
----
-
 <div class="intro">
 	<p>
 		Bonjour, je suis Ahmadou Waly Ndiaye, développeur web au Sénégal.
@@ -18,15 +9,7 @@ const numberOfLatestPostsToShow = 3;
 		<a href="https://twitter.com/_sir_kane">Twitter</a>
 	</p>
 </div>
-{% set postsCount = collections.posts | length %}
-{% set latestPostsCount = postsCount | min(numberOfLatestPostsToShow) %}
-<h1>{{ latestPostsCount }} dernier{% if latestPostsCount != 1 %}s{% endif %} article{% if latestPostsCount != 1 %}s{% endif %}</h1>
+<h1>Articles</h1>
 
-{% set postslist = collections.posts | head(-1 * numberOfLatestPostsToShow) %}
-{% set postslistCounter = postsCount %}
+{% set postslist = collections.posts %}
 {% include "postslist.njk" %}
-
-{% set morePosts = postsCount - numberOfLatestPostsToShow %}
-{% if morePosts > 0 %}
-<p>{{ morePosts }} autre{% if morePosts != 1 %}s{% endif %} article{% if morePosts != 1 %}s{% endif %} disponible{% if morePosts != 1 %}s{% endif %} dans <a href="blog.njk">les archives</a>.</p>
-{% endif %}
